# ifcusd

./: .gitignore  LICENSE  README.md  convert_ifc_to_usd.py  pyproject.toml
.github/workflows/: python-publish.yml
package/: ifcusd-0.1.0-py3-none-any.whl
src/ifcusd/: __init__.py  __main__.py  bootstrap.py  cli.py  converter.py  dependencies.py  geometry.py  hierarchy.py  metadata.py  naming.py  options.py  usd_writer.py
tests/: test_bootstrap.py  test_geometry.py  test_metadata.py  test_naming_and_hierarchy.py  test_usd_writer.py
