[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "IfcUSD"
version = "0.1.0"
description = "Convert IFC models to OpenUSD using IfcOpenShell geometry and metadata."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "OpenBIM2OpenUSD contributors" }
]
keywords = ["ifc", "openbim", "openusd", "usd", "ifcopenshell", "bim"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Multimedia :: Graphics :: 3D Modeling",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "ifcopenshell>=0.8.0",
  "usd-core>=24.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
ifcusd = "ifcusd.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ifcusd"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
